# sdizo1

./: CMakeLists.txt  README.md
czas/: Czas.cpp  Czas.h
kopiec/: Kopiec.cpp  Kopiec.h
lista_dwukierunkowa/: ElementListy.cpp  ElementListy.h  Lista.cpp  Lista.h
main/: main.cpp
menu/: Menu.cpp  Menu.h
tablica_dynamiczna/: Tablica.cpp  Tablica.h
